Unix: new build system
* Reworked configure script
  * Now passes shellcheck
* New Makefile for Unix
  * Simplified `make` and `make install` targets
  * Simplified `make bootstrap` target
  * New targets `make binary` and `make install-binary`
    build and install an all-in-one binary of LuaRocks

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ unit_script: &unit_script
   
 integration_script: &integration_script
   - lua -v
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then shellcheck ./configure; fi
   - ./configure --with-lua=lua_install
-  - ./makedist scm
+  - ./makedist dev
   - busted -o gtest --exclude-tags=git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
   - busted -o gtest --exclude-tags=git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis,env=full"
           
