Tests: add smoke test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ cache:
   - testrun/testing_server-2.1
   - testrun/binary-samples
   
+smoke_script: &smoke_script
+  - ./makedist 3.1.1
+  - ./smoke_test.sh luarocks-3.1.1.tar.gz
+
 unit_script: &unit_script
   - busted -o gtest --exclude-tags=git,integration --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
   - busted -o gtest --exclude-tags=git,integration --verbose -Xhelper "lua_dir=$PWD/lua_install,travis,env=full"
@@ -21,12 +25,24 @@ integration_script: &integration_script
   - lua -v
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then shellcheck ./configure; fi
   - ./configure --with-lua=lua_install
-  - ./makedist dev
-  - busted -o gtest --exclude-tags=gpg,git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
-  - busted -o gtest --exclude-tags=gpg,git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis,env=full"
-          
+  - ./makedist 3.1.1
+  - busted -o gtest --exclude-tags=git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
+  - busted -o gtest --exclude-tags=git,unit --verbose -Xhelper "lua_dir=$PWD/lua_install,travis,env=full"
+
 jobs:
   include:
+    # Smoke tests
+    - stage: smoke
+      script: *smoke_script
+      os: linux
+      env:
+        - LUA="lua=5.3"
+    - stage: smoke
+      script: *smoke_script
+      os: osx
+      language: generic
+      env:
+        - LUA="luajit=2.1"
     # Unit tests for linux
     - stage: Unit on Linux
       script: *unit_script
