--- a/binary/Makefile.windows
+++ b/binary/Makefile.windows
@@ -9,8 +9,9 @@ OPENSSL_PLATFORM=mingw
 LIBLUA_VERSION=5.3.4
 OPENSSL_VERSION=1.0.2o
 ZLIB_VERSION=1.2.11
+BZIP2_VERSION=1.0.6
 
-windows-binary: windows-deps/lib/liblua.a windows-deps/lib/libssl.a windows-deps/lib/libz.a
+windows-binary: windows-deps/lib/liblua.a windows-deps/lib/libssl.a windows-deps/lib/libz.a windows-deps/lib/libbz2.a
 	STATIC_GCC_AR=$(MINGW_PREFIX)-ar \
 	STATIC_GCC_RANLIB=$(MINGW_PREFIX)-ranlib \
 	STATIC_GCC_CC=$(MINGW_PREFIX)-gcc \
@@ -53,6 +54,19 @@ windows-deps/lib/libz.a: build-windows-deps/zlib-$(ZLIB_VERSION)
 	cd build-windows-deps/zlib-$(ZLIB_VERSION) && $(MINGW_PREFIX)-strip -g libz.a
 	mkdir -p windows-deps/lib
 	cd build-windows-deps/zlib-$(ZLIB_VERSION) && cp libz.a ../../windows-deps/lib
+
+build-windows-deps/bzip2-$(BZIP2_VERSION).tar.gz:
+	mkdir -p build-windows-deps
+	cd build-windows-deps && curl -OL http://www.bzip.org/$(BZIP2_VERSION)/bzip2-$(BZIP2_VERSION).tar.gz
+build-windows-deps/bzip2-$(BZIP2_VERSION): build-windows-deps/bzip2-$(BZIP2_VERSION).tar.gz
+	cd build-windows-deps && tar zxvpf bzip2-$(BZIP2_VERSION).tar.gz
+windows-deps/lib/libbz2.a: build-windows-deps/bzip2-$(BZIP2_VERSION)
+	cd build-windows-deps/bzip2-$(BZIP2_VERSION) && make libbz2.a CC=$(MINGW_PREFIX)-gcc AR=$(MINGW_PREFIX)-ar RANLIB=$(MINGW_PREFIX)-ranlib
+	mkdir -p windows-deps/include
+	cd build-windows-deps/bzip2-$(BZIP2_VERSION) && cp bzlib.h ../../windows-deps/include
+	cd build-windows-deps/bzip2-$(BZIP2_VERSION) && $(MINGW_PREFIX)-strip -g libbz2.a
+	mkdir -p windows-deps/lib
+	cd build-windows-deps/bzip2-$(BZIP2_VERSION) && cp libbz2.a ../../windows-deps/lib
 
 windows-clean:
 	rm -rf windows-deps
