Reorder Appveyor tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,53 +9,54 @@ environment:
   LUAROCKS_VER: 3.0.0
 
   matrix:
-  # Unit tests
+  # Lua 5.1 tests
   - LUA: "lua 5.1"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "integration"
+  - LUA: "lua 5.1"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "lua 5.1"
+    COMPILER: "mingw"
+    FILES: "spec//build_spec.lua"
+    EXCLUDE: ""
+  # Lua 5.2 tests  
+  - LUA: "lua 5.2"
     COMPILER: "vs"
     FILES: ""
     EXCLUDE: "integration"
   - LUA: "lua 5.2"
     COMPILER: "vs"
     FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "lua 5.2"
+    COMPILER: "mingw"
+    FILES: "spec//build_spec.lua"
+    EXCLUDE: ""
+  # Lua 5.3 tests
+  - LUA: "lua 5.3"
+    COMPILER: "vs"
+    FILES: ""
     EXCLUDE: "integration"
   - LUA: "lua 5.3"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "unit"
+  - LUA: "lua 5.3"
+    COMPILER: "mingw"
+    FILES: "spec//build_spec.lua"
+    EXCLUDE: ""
+  # LuaJIT 2.1 tests
+  - LUA: "luajit 2.1"
     COMPILER: "vs"
     FILES: ""
     EXCLUDE: "integration"
   - LUA: "luajit 2.1"
     COMPILER: "vs"
     FILES: ""
-    EXCLUDE: "integration"
-  # Integration tests
-  - LUA: "lua 5.1"
-    COMPILER: "vs"
-    FILES: ""
     EXCLUDE: "unit"
-  - LUA: "lua 5.2"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "unit"
-  - LUA: "lua 5.3"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "unit"
-  - LUA: "luajit 2.1"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "unit"
-  # Build tests with MinGW
-  - LUA: "lua 5.1"
-    COMPILER: "mingw"
-    FILES: "spec//build_spec.lua"
-    EXCLUDE: ""
-  - LUA: "lua 5.2"
-    COMPILER: "mingw"
-    FILES: "spec//build_spec.lua"
-    EXCLUDE: ""
-  - LUA: "lua 5.3"
-    COMPILER: "mingw"
-    FILES: "spec//build_spec.lua"
-    EXCLUDE: ""
   - LUA: "luajit 2.1"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
