Makefile: Generate luarocks 'binary' locally before installing with 'install'

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /test/testing_*
 /test/luacov.*
 # Stuff that pops up during development but shouldn't be in the repo (helps clean up `git status`)
+/build
 /build-binary
 /*.rock
 /*.tar.gz
