--- a/.travis.yml
+++ b/.travis.yml
@@ -121,7 +121,7 @@ jobs:
       language: generic
               
 before_install:
-  - if [ ! -f lua_install/bin/luarocks ]; then pip2 install hererocks; fi
+  - if [ ! -f lua_install/bin/luarocks ]; then pip install hererocks; fi
   - if [ ! -f lua_install/bin/luarocks ]; then hererocks lua_install -r^ --$LUA; fi
   - export PATH=$PATH:$PWD/lua_install/bin # Add directory with all installed binaries to PATH
 
