--- a/releases/releases.json
+++ b/releases/releases.json
@@ -1,5 +1,11 @@
 [
 {
+"3.1.1": {
+"date": "2019-05-06",
+"files": ["luarocks-3.1.1.tar.gz", "luarocks-3.1.1.tar.gz.asc", "luarocks-3.1.1-win32.zip", "luarocks-3.1.1-win32.zip.asc", "luarocks-3.1.1-windows-32.zip", "luarocks-3.1.1-windows-32.zip.asc", "luarocks-3.1.1-linux-x86_64.zip", "luarocks-3.1.1-linux-x86_64.zip.asc"],
+"about": []
+}},
+{
 "3.1.0": {
 "date": "2019-04-29",
 "files": ["luarocks-3.1.0.tar.gz", "luarocks-3.1.0.tar.gz.asc", "luarocks-3.1.0-win32.zip", "luarocks-3.1.0-win32.zip.asc", "luarocks-3.1.0-windows-32.zip", "luarocks-3.1.0-windows-32.zip.asc", "luarocks-3.1.0-linux-x86_64.zip", "luarocks-3.1.0-linux-x86_64.zip.asc"],
