--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ cache:
   - testrun/testing_server-5.3
   - testrun/testing_server-2.1
   - testrun/binary-samples
+
+smoke_script: &smoke_script
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - ./makedist $BRANCH
+  - ./smoke_test.sh luarocks-$BRANCH.tar.gz
   
 unit_script: &unit_script
   - busted -o gtest --exclude-tags=git,integration --verbose -Xhelper "lua_dir=$PWD/lua_install,travis"
@@ -27,6 +32,20 @@ integration_script: &integration_script
           
 jobs:
   include:
+    # Smoke tests for release branches
+    - stage: smoke
+      if: branch =~ [0-9].*
+      script: *smoke_script
+      os: linux
+      env:
+        - LUA="lua=5.3"
+    - stage: smoke
+      if: branch =~ [0-9].*
+      script: *smoke_script
+      os: osx
+      language: generic
+      env:
+        - LUA="luajit=2.1"
     # Unit tests for linux
     - stage: Unit on Linux
       script: *unit_script
