--- a/releases/releases.json
+++ b/releases/releases.json
@@ -1,5 +1,11 @@
 [
 {
+"3.1.3": {
+"date": "2019-06-06",
+"files": ["luarocks-3.1.3.tar.gz", "luarocks-3.1.3.tar.gz.asc", "luarocks-3.1.3-win32.zip", "luarocks-3.1.3-win32.zip.asc", "luarocks-3.1.3-windows-32.zip", "luarocks-3.1.3-windows-32.zip.asc", "luarocks-3.1.3-linux-x86_64.zip", "luarocks-3.1.3-linux-x86_64.zip.asc"],
+"about": []
+}},
+{
 "3.1.2": {
 "date": "2019-05-07",
 "files": ["luarocks-3.1.2.tar.gz", "luarocks-3.1.2.tar.gz.asc", "luarocks-3.1.2-win32.zip", "luarocks-3.1.2-win32.zip.asc", "luarocks-3.1.2-windows-32.zip", "luarocks-3.1.2-windows-32.zip.asc", "luarocks-3.1.2-linux-x86_64.zip", "luarocks-3.1.2-linux-x86_64.zip.asc"],
