--- a/releases/releases.json
+++ b/releases/releases.json
@@ -1,5 +1,11 @@
 [
 {
+"3.8.0": {
+"date": "2021-11-08",
+"files": ["luarocks-3.8.0.tar.gz", "luarocks-3.8.0.tar.gz.asc", "luarocks-3.8.0-win32.zip", "luarocks-3.8.0-win32.zip.asc", "luarocks-3.8.0-windows-32.zip", "luarocks-3.8.0-windows-32.zip.asc", "luarocks-3.8.0-windows-64.zip", "luarocks-3.8.0-windows-64.zip.asc", "luarocks-3.8.0-linux-x86_64.zip", "luarocks-3.8.0-linux-x86_64.zip.asc"],
+"about": []
+}},
+{
 "3.7.0": {
 "date": "2021-04-13",
 "files": ["luarocks-3.7.0.tar.gz", "luarocks-3.7.0.tar.gz.asc", "luarocks-3.7.0-win32.zip", "luarocks-3.7.0-win32.zip.asc", "luarocks-3.7.0-windows-32.zip", "luarocks-3.7.0-windows-32.zip.asc", "luarocks-3.7.0-windows-64.zip", "luarocks-3.7.0-windows-64.zip.asc", "luarocks-3.7.0-linux-x86_64.zip", "luarocks-3.7.0-linux-x86_64.zip.asc"],
