--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,50 +9,18 @@ environment:
   LUAROCKS_VER: 3.0.0
 
   matrix:
-  # Lua 5.1 tests
-  - LUAV: "5.1"
+  # Lua 5.4 tests
+  - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "vs"
     FILES: ""
     EXCLUDE: "integration"
-  - LUAV: "5.1"
+  - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "vs"
     FILES: ""
     EXCLUDE: "unit"
-  - LUAV: "5.1"
-    LUAT: "lua"
-    COMPILER: "mingw"
-    FILES: "spec//build_spec.lua"
-    EXCLUDE: ""
-  # Lua 5.2 tests  
-  - LUAV: "5.2"
-    LUAT: "lua"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "integration"
-  - LUAV: "5.2"
-    LUAT: "lua"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "unit"
-  - LUAV: "5.2"
-    LUAT: "lua"
-    COMPILER: "mingw"
-    FILES: "spec//build_spec.lua"
-    EXCLUDE: ""
-  # Lua 5.3 tests
-  - LUAV: "5.3"
-    LUAT: "lua"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "integration"
-  - LUAV: "5.3"
-    LUAT: "lua"
-    COMPILER: "vs"
-    FILES: ""
-    EXCLUDE: "unit"
-  - LUAV: "5.3"
+  - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "mingw"
     FILES: "spec//build_spec.lua"
@@ -82,7 +50,9 @@ init:
 - set PATH=C:\MinGW\bin;%PATH%
 
 before_build:
-  - set PATH=C:\Python37\Scripts;%PATH% # Add directory containing 'pip' to PATH
+  - set PATH=C:\Python37;C:\Python37\Scripts;%PATH% # Add directory containing 'pip' to PATH
+  - IF NOT EXIST lua_install-%LUAV%\bin\activate.bat ( pip install --upgrade certifi )
+  - FOR /F "tokens=* USEBACKQ" %%F IN (`python -c "import certifi;print(certifi.where())"`) DO ( SET SSL_CERT_FILE=%%F )
   - IF NOT EXIST lua_install-%LUAV%\bin\activate.bat ( pip install hererocks )
   - IF NOT EXIST lua_install-%LUAV%\bin\activate.bat ( hererocks lua_install-%LUAV% --%LUAT% %LUAV% --luarocks latest --target=%COMPILER% )
   - call lua_install-%LUAV%\bin\activate
@@ -101,16 +71,10 @@ after_test:
   - cd testrun && codecov -f luacov.report.out -X gcov
 
 cache:
-  - lua_install-5.1
-  - lua_install-5.2
-  - lua_install-5.3
+  - lua_install-5.4
   - lua_install-2.1
-  - testrun/testing_cache-5.1
-  - testrun/testing_cache-5.2
-  - testrun/testing_cache-5.3
+  - testrun/testing_cache-5.4
   - testrun/testing_cache-2.1
-  - testrun/testing_server-5.1
-  - testrun/testing_server-5.2
-  - testrun/testing_server-5.3
+  - testrun/testing_server-5.4
   - testrun/testing_server-2.1
   - testrun/binary-samples
