CI: bump gh-actions-lua to master to use Lua 5.4.4

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@v8.0.0
+    - uses: leafo/gh-actions-lua@master
       with:
         luaVersion: ${{ matrix.lua-version }}
 
