--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
 name: test
 
-on: [push]
+on:
+  push:
+    branches: main
+  pull_request:
+    branches: '*'
 
 jobs:
   ##############################################################################
