--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,17 +9,23 @@ environment:
   LUAROCKS_VER: 3.0.0
 
   matrix:
+  # quick tests
+  - LUAV: "2.1"
+    LUAT: "luajit"
+    COMPILER: "vs"
+    FILES: ""
+    EXCLUDE: "integration,unit"
   # Lua 5.4 tests
   - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "vs"
     FILES: ""
-    EXCLUDE: "integration"
+    EXCLUDE: "integration,quick"
   - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "vs"
     FILES: ""
-    EXCLUDE: "unit"
+    EXCLUDE: "unit,quick"
   - LUAV: "5.4"
     LUAT: "lua"
     COMPILER: "mingw"
@@ -30,12 +36,12 @@ environment:
     LUAT: "luajit"
     COMPILER: "vs"
     FILES: ""
-    EXCLUDE: "integration"
+    EXCLUDE: "integration,quick"
   - LUAV: "2.1"
     LUAT: "luajit"
     COMPILER: "vs"
     FILES: ""
-    EXCLUDE: "unit"
+    EXCLUDE: "unit,quick"
   - LUAV: "2.1"
     LUAT: "luajit"
     COMPILER: "mingw"
